deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: build-dashboard
  labels:
    app: build-dashboard
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: build-dashboard
